fix for mobile width

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div id="header-background" style="position: absolute;">
             <img src="header-background.jpg" width="100%" alt="">
         </div>
-        <div id="header-logo-background" style="width: 100%; position: fixed; top: 15vw;">
+        <div id="header-logo-background" style="width: 100vw; position: fixed; top: 15vw;">
             <div id="header-logo" style="width: 80%; margin: 0 auto; padding: 2vw 0 3vw 0">
                 <img src="logo.png" width="100%" alt="">
             </div>
