--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </section>
         <h1>GET IT NOW</h1>
         <section>
-            <div style="width: 646px; margin: 0 auto;">
+            <div style="max-width: 646px; width:100%; margin: 0 auto;">
                 <iframe src="https://store.steampowered.com/widget/1171160/" frameborder="0" width="100%"
                     height="190"></iframe>
             </div>
