--- a/index.html
+++ b/index.html
@@ -36,19 +36,22 @@
         <div id="header-background" style="position: absolute;">
             <img src="header-background.jpg" width="100%" alt="">
         </div>
-        <div id="header-logo-background" style="width: 100vw; position: fixed; top: 15vw;">
+        <div id="header-logo-background" style="width: 100vw; position: fixed; top: 15vw; z-index: 1;">
             <div id="header-logo" style="width: 80%; margin: 0 auto; padding: 2vw 0 3vw 0">
                 <img src="logo.png" width="100%" alt="">
             </div>
         </div>
-        <div id="header-foreground" style="position: absolute;">
+        <div id="header-foreground" style="position: absolute; z-index: 2;">
             <img src="header-foreground.png" width="100%" alt="">
         </div>
     </header>
     <div class="content" style="width: 80%; margin: 0 auto">
         <h1>TRAILER</h1>
-        <section class="trailer">
-            <img src="header-background.jpg" width="100%" alt="">
+        <section id="trailer" style="position: relative; padding-bottom: 56.25%; height: 0;">
+            <iframe src="https://www.youtube.com/embed/bvAkAQuuRPQ?controls=0" frameborder="0"
+                style="width: 100%; height: 100%; position: absolute; top: 0; left: 0;"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </section>
         <h1>GET IT NOW</h1>
         <section>
