fix thumbnail links

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
         </section>
         <h1>SCREENSHOTS</h1>
         <section class="screenshots">
-            <div> <a href="s1.jpg" target="_blank"> <img src="t1.jpg" width="100%" alt=""> </div> </a>
-            <div> <a href="s2.jpg" target="_blank"> <img src="t2.jpg" width="100%" alt=""> </div>
-            <div> <a href="s3.jpg" target="_blank"> <img src="t3.jpg" width="100%" alt=""> </div>
-            <div> <a href="s4.jpg" target="_blank"> <img src="t4.jpg" width="100%" alt=""> </div>
-            <div> <a href="s5.jpg" target="_blank"> <img src="t5.jpg" width="100%" alt=""> </div>
-            <div> <a href="s1.jpg" target="_blank"> <img src="t1.jpg" width="100%" alt=""> </div>
+            <div> <a href="s1.jpg" target="_blank"> <img src="t1.jpg" width="100%" alt=""> </a> </div>
+            <div> <a href="s2.jpg" target="_blank"> <img src="t2.jpg" width="100%" alt=""> </a> </div>
+            <div> <a href="s3.jpg" target="_blank"> <img src="t3.jpg" width="100%" alt=""> </a> </div>
+            <div> <a href="s4.jpg" target="_blank"> <img src="t4.jpg" width="100%" alt=""> </a> </div>
+            <div> <a href="s5.jpg" target="_blank"> <img src="t5.jpg" width="100%" alt=""> </a> </div>
+            <div> <a href="s1.jpg" target="_blank"> <img src="t1.jpg" width="100%" alt=""> </a> </div>
         </section>
     </div>
     <footer style="margin: 3vw;">
