--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <body style="background-color: #232a33;">
     <header style="height: 56.25%; padding-bottom: 60%;">
-        <div id="header-background" style="position: absolute;">
+        <div id="header-background" style="position: absolute; width: 100%;">
             <img src="header-background.jpg" width="100%" alt="">
         </div>
         <div id="header-logo-background" style="width: 100vw; position: fixed; top: 15vw; z-index: 1;">
@@ -42,7 +42,7 @@
                 <img src="logo.webp" width="100%" alt="">
             </div>
         </div>
-        <div id="header-foreground" style="position: absolute; z-index: 2;">
+        <div id="header-foreground" style="position: absolute; width: 100%; z-index: 2;">
             <img src="header-foreground.webp" width="100%" alt="">
         </div>
     </header>
