switch thumbnails to webp

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
         </section>
         <h1>SCREENSHOTS</h1>
         <section class="screenshots">
-            <a href="s1.jpg" target="_blank"> <img src="t1.jpg" width="100%" height="100%"> </a>
-            <a href="s2.jpg" target="_blank"> <img src="t2.jpg" width="100%" height="100%"> </a>
-            <a href="s3.jpg" target="_blank"> <img src="t3.jpg" width="100%" height="100%"> </a>
-            <a href="s4.jpg" target="_blank"> <img src="t4.jpg" width="100%" height="100%"> </a>
-            <a href="s5.jpg" target="_blank"> <img src="t5.jpg" width="100%" height="100%"> </a>
-            <a href="s1.jpg" target="_blank"> <img src="t1.jpg" width="100%" height="100%"> </a>
+            <a href="s1.jpg" target="_blank"> <img src="t1.webp" width="100%" height="100%"> </a>
+            <a href="s2.jpg" target="_blank"> <img src="t2.webp" width="100%" height="100%"> </a>
+            <a href="s3.jpg" target="_blank"> <img src="t3.webp" width="100%" height="100%"> </a>
+            <a href="s4.jpg" target="_blank"> <img src="t4.webp" width="100%" height="100%"> </a>
+            <a href="s5.jpg" target="_blank"> <img src="t5.webp" width="100%" height="100%"> </a>
+            <a href="s1.jpg" target="_blank"> <img src="t1.webp" width="100%" height="100%"> </a>
         </section>
     </div>
     <footer style="margin: 3vw;">
