more screenshots, fewer crappy unsupported webp

--- a/index.html
+++ b/index.html
@@ -69,12 +69,20 @@
         </section>
         <h1>SCREENSHOTS</h1>
         <section class="screenshots">
-            <a href="s1.jpg" target="_blank"> <img src="t1.webp" width="100%" height="100%"> </a>
-            <a href="s2.jpg" target="_blank"> <img src="t2.webp" width="100%" height="100%"> </a>
-            <a href="s3.jpg" target="_blank"> <img src="t3.webp" width="100%" height="100%"> </a>
-            <a href="s4.jpg" target="_blank"> <img src="t4.webp" width="100%" height="100%"> </a>
-            <a href="s5.jpg" target="_blank"> <img src="t5.webp" width="100%" height="100%"> </a>
-            <a href="s1.jpg" target="_blank"> <img src="t1.webp" width="100%" height="100%"> </a>
+            <a href="screenshots/nuvavult-fullsize-screenshot (1).jpg"  target="_blank"> <img src="screenshots/nuvavult-screenshot (1).jpg"  alt="NUVAVULT gameplay screenshot" width="100%" height="100%"> </a>
+            <a href="screenshots/nuvavult-fullsize-screenshot (2).jpg"  target="_blank"> <img src="screenshots/nuvavult-screenshot (2).jpg"  alt="NUVAVULT gameplay screenshot" width="100%" height="100%"> </a>
+            <a href="screenshots/nuvavult-fullsize-screenshot (3).jpg"  target="_blank"> <img src="screenshots/nuvavult-screenshot (3).jpg"  alt="NUVAVULT gameplay screenshot" width="100%" height="100%"> </a>
+            <a href="screenshots/nuvavult-fullsize-screenshot (4).jpg"  target="_blank"> <img src="screenshots/nuvavult-screenshot (4).jpg"  alt="NUVAVULT gameplay screenshot" width="100%" height="100%"> </a>
+            <a href="screenshots/nuvavult-fullsize-screenshot (5).jpg"  target="_blank"> <img src="screenshots/nuvavult-screenshot (5).jpg"  alt="NUVAVULT gameplay screenshot" width="100%" height="100%"> </a>
+            <a href="screenshots/nuvavult-fullsize-screenshot (6).jpg"  target="_blank"> <img src="screenshots/nuvavult-screenshot (6).jpg"  alt="NUVAVULT gameplay screenshot" width="100%" height="100%"> </a>
+            <a href="screenshots/nuvavult-fullsize-screenshot (7).jpg"  target="_blank"> <img src="screenshots/nuvavult-screenshot (7).jpg"  alt="NUVAVULT gameplay screenshot" width="100%" height="100%"> </a>
+            <a href="screenshots/nuvavult-fullsize-screenshot (8).jpg"  target="_blank"> <img src="screenshots/nuvavult-screenshot (8).jpg"  alt="NUVAVULT gameplay screenshot" width="100%" height="100%"> </a>
+            <a href="screenshots/nuvavult-fullsize-screenshot (9).jpg"  target="_blank"> <img src="screenshots/nuvavult-screenshot (9).jpg"  alt="NUVAVULT gameplay screenshot" width="100%" height="100%"> </a>
+            <a href="screenshots/nuvavult-fullsize-screenshot (10).jpg" target="_blank"> <img src="screenshots/nuvavult-screenshot (10).jpg" alt="NUVAVULT gameplay screenshot" width="100%" height="100%"> </a>
+            <a href="screenshots/nuvavult-fullsize-screenshot (11).jpg" target="_blank"> <img src="screenshots/nuvavult-screenshot (11).jpg" alt="NUVAVULT gameplay screenshot" width="100%" height="100%"> </a>
+            <a href="screenshots/nuvavult-fullsize-screenshot (12).jpg" target="_blank"> <img src="screenshots/nuvavult-screenshot (12).jpg" alt="NUVAVULT gameplay screenshot" width="100%" height="100%"> </a>
+            <a href="screenshots/nuvavult-fullsize-screenshot (13).jpg" target="_blank"> <img src="screenshots/nuvavult-screenshot (13).jpg" alt="NUVAVULT gameplay screenshot" width="100%" height="100%"> </a>
+            <a href="screenshots/nuvavult-fullsize-screenshot (14).jpg" target="_blank"> <img src="screenshots/nuvavult-screenshot (14).jpg" alt="NUVAVULT gameplay screenshot" width="100%" height="100%"> </a>
         </section>
     </div>
     <footer style="margin: 3vw;">
