add mroe space between sections

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         }
 
         h1 {
-            margin: 6vw 0 3vw 0;
+            margin: 13vw 0 3vw 0;
         }
     </style>
 </head>
 
 <body style="background-color: #232a33;">
-    <header style="height: 56.25%; padding-bottom: 60%;">
+    <header style="height: 56.25%; padding-bottom: 56.25%;">
         <div id="header-background" style="position: absolute; width: 100%;">
             <img src="header-background.jpg" width="100%">
         </div>
@@ -85,7 +85,7 @@
             <a href="screenshots/nuvavult-fullsize-screenshot (14).jpg" target="_blank"> <img src="screenshots/nuvavult-screenshot (14).jpg" alt="NUVAVULT gameplay screenshot" width="100%" height="100%"> </a>
         </section>
     </div>
-    <footer style="margin: 3vw;">
+    <footer style="margin: 8vw 0 4vw 0;">
         <div> A game by <a href="https://github.com/mimhufford">Mim Hufford</a> </div>
         <br>
         <div> <a href="https://steamcommunity.com/app/1171160">Discuss</a> on Steam </div>
