switch logo back to png for Safari support

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div id="header-logo-background" style="width: 100vw; position: fixed; top: 15vw; z-index: 1;">
             <div id="header-logo" style="width: 80%; margin: 0 auto; padding: 2vw 0 3vw 0">
-                <img src="logo.webp" width="100%">
+                <img src="nuvavult-logo.png" alt="NUVAVULT logo" width="100%">
             </div>
         </div>
         <div id="header-foreground" style="position: absolute; width: 100%; z-index: 2;">
