--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 <body style="background-color: #08090b; background-image: url(bg.jpg); background-size: 100%; ">
     <header style="height: 56.25%; padding-bottom: 56.25%;">
         <div id="header-background" style="position: absolute; width: 100%;">
-            <img src="header-background.png" width="100%">
+            <picture>
+                <source srcset="header-background.webp">
+                <source srcset="header-background.png"> 
+                <img src="header-background.png" width="100%" alt="NUVAVULT main image">
+            </picture>
         </div>
         <div id="header-logo-background" style="width: 100vw; position: fixed; top: 15vw; z-index: 1;">
             <div id="header-logo" style="width: 80%; margin: 0 auto; padding: 2vw 0 3vw 0">
@@ -49,7 +53,11 @@
             </div>
         </div>
         <div id="header-foreground" style="position: absolute; width: 100%; z-index: 2;">
-            <img src="header-foreground.png" width="100%">
+            <picture>
+                <source srcset="header-foreground.webp">
+                <source srcset="header-foreground.png"> 
+                <img src="header-foreground.png" width="100%" alt="NUVAVULT main image">
+            </picture>
         </div>
     </header>
     <div class="content" style="width: 80%; margin: 0 auto">
