--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <header style="height: 56.25%; padding-bottom: 56.25%;">
         <div id="header-background" style="position: absolute; width: 100%;">
             <picture>
-                <source srcset="header-background.webp">
-                <source srcset="header-background.png"> 
+                <source srcset="header-background.webp" type="image/webp">
+                <source srcset="header-background.png"  type="image/png"> 
                 <img src="header-background.png" width="100%" alt="NUVAVULT main image">
             </picture>
         </div>
@@ -54,8 +54,8 @@
         </div>
         <div id="header-foreground" style="position: absolute; width: 100%; z-index: 2;">
             <picture>
-                <source srcset="header-foreground.webp">
-                <source srcset="header-foreground.png"> 
+                <source srcset="header-foreground.webp" type="image/webp">
+                <source srcset="header-foreground.png"  type="image/png"> 
                 <img src="header-foreground.png" width="100%" alt="NUVAVULT main image">
             </picture>
         </div>
