--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
             <iframe src="https://www.youtube.com/embed/bvAkAQuuRPQ?controls=0" frameborder="0"
                 style="width: 100%; height: 100%; position: absolute; top: 0; left: 0;"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+                title="trailer" allowfullscreen></iframe>
         </section>
         <h1>GET IT NOW</h1>
         <section>
             <div style="max-width: 646px; width:100%; margin: 0 auto;">
-                <iframe src="https://store.steampowered.com/widget/1171160/" frameborder="0" width="100%"
-                    height="190"></iframe>
+                <iframe src="https://store.steampowered.com/widget/1171160/" frameborder="0"
+                    width="100%" height="190" title="steam"></iframe>
             </div>
         </section>
         <h1>SCREENSHOTS</h1>
