avoid logo not positioning on reload

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
         }
         addEventListener("resize", () => window.requestAnimationFrame(calculate))
         addEventListener("scroll", () => window.requestAnimationFrame(calculate))
+        addEventListener("load",   () => window.requestAnimationFrame(calculate))
     </script>
 </body>
 
