--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="Description" content="NUVAVULT is a perspective altering puzzle game where 2D and 3D collide.">
+    <meta name="Description" content="NUVAVULT is a perspective altering puzzle game where 2D and 3D collide. Made by Mim Hufford. Availble on Steam.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/png" href="favicon.png" />
@@ -64,12 +64,12 @@
     <div class="content" style="width: 80%; margin: 0 auto">
         <h1>TRAILER</h1>
         <section id="trailer" style="position: relative; padding-bottom: 56.25%; height: 0;">
-            <iframe src="https://www.youtube.com/embed/bvAkAQuuRPQ?controls=0" frameborder="0"
+            <iframe src="https://www.youtube.com/embed/ObnA8Iiu8Jk?controls=0" frameborder="0"
                 style="width: 100%; height: 100%; position: absolute; top: 0; left: 0;"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 title="trailer" allowfullscreen></iframe>
         </section>
-        <h1>GET IT NOW</h1>
+        <h1>PLAY IT NOW</h1>
         <section>
             <div style="max-width: 646px; width:100%; margin: 0 auto;">
                 <iframe src="https://store.steampowered.com/widget/1171160/" frameborder="0"
