--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-44040760-3"></script>
+    <script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'UA-44040760-3');</script>
     <meta charset="UTF-8">
     <meta name="Description" content="NUVAVULT is a perspective altering puzzle game where 2D and 3D collide. Made by Mim Hufford. Availble on Steam.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
